<resources>
    <string name="app_name">GrupalSemana2</string>
    <string name="txtViewFecha">Fecha</string>
    <string name="txtViewResumen">Resumen</string>
    <string name="txtViewEquipamiento">Equipamiento</string>
    <string name="txtViewEstacionDeMuestreo">Estacion de Muestreo</string>
    <string name="txtViewMetodoDeMuestreo">Metodo de Muestreo</string>
    <string name="txtViewUbicacion">Ubicacion</string>
    <string name="txtViewZona">Zona</string>
    <string name="txtViewRegion">Region</string>
    <string name="txtViewDepartamento">Departamento</string>
    <string name="txtViewLocalidad">Localidad</string>
    <string name="txtViewFormulario">Formulario</string>
    <string name="title_activity_mostrar_actividad_de_campo">MostrarActividadDeCampo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_prueba">prueba</string>


</resources>